--- a/app/netlify-forms.html
+++ b/app/netlify-forms.html
@@ -4,21 +4,33 @@
     <form name="hero" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="hero" />
       <input name="name" />
+      <input name="phone" />
+      <input name="address" />
       <input name="email" />
+      <textarea name="message"></textarea>
     </form>
 
     <form name="pop-up" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="pop-up" />
       <input name="name" />
+      <input name="phone" />
+      <input name="address" />
       <input name="email" />
+      <input name="bedrooms" />
+      <input name="bathrooms" />
+      <input name="floors" />
+      <input name="yearBuilt" />
+      <input name="propertyArea" />
+      <input name="totalFloors" />
+      <textarea name="notes"></textarea>
     </form>
 
     <form name="contact" method="POST" data-netlify="true">
-        <input type="hidden" name="form-name" value="contact" />
-        <input name="name" />
-        <input name="email" />
-        <textarea name="message"></textarea>
+      <input type="hidden" name="form-name" value="contact" />
+      <input name="name" />
+      <input name="email" />
+      <input name="phone" />
+      <textarea name="message"></textarea>
     </form>
-
   </body>
 </html>
